# DWES-UT02-Practica2

./: README.md  db.sqlite3  pyproject.toml
ejercicio01/: urls.py
ejercicio1_php/: pagos.php
ejercicio2/src/main/java/es/dwes/UT01/: HelloBean.java
ejercicio2/src/main/webapp/: index.xhtml
ejercicio2_django/ejercicio1_php/: pagos.php
ejercicio2_django/ejercicio2/src/main/java/es/dwes/UT01/: HelloBean.java
ejercicio2_django/ejercicio2/src/main/webapp/: index.xhtml
usuarios/: views.py
